--- a/README.org
+++ b/README.org
@@ -3,6 +3,7 @@
 
 * Summary 
 A rofi-script to watch youtube using MPV
+[[./pictures/2021-10-20 16-03-33.gif]]
 
 * Requirements
 ** rofi
@@ -14,6 +15,8 @@ npm install axios
 #+end_src
 
 ** mpv
-** youtube-dl
+** yt-dlp
 * Usage
+A search engine for youtube using rofi.
+This scripts call the youtube api to return your result, and then play the video using mpv and yt-dlp
 
